Fixed some UI related issues, improved readability, Fixed some links & colors, changed cursor types on certain elements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,6 +87,15 @@ body {
     background-blend-mode: overlay;
 }
 
+select {
+    cursor: pointer;
+}
+
+select option {
+    color: var(--foreground);
+    background-color: var(--background);
+}
+
 /* Custom slider styles */
 .slider {
     -webkit-appearance: none;
